Horizontal scroll fix 13

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     /* width: auto; */
     min-width: 300px;
     max-width: 100%;
-    overflow: hidden;
+    overflow-x: hidden;
     padding: 1rem;
     font-family: 'Open Sans', sans-serif;
 }
